Included index.html, updated base.html and imported views in __init__

--- a/voteforindia/templates/base.html
+++ b/voteforindia/templates/base.html
@@ -11,7 +11,13 @@
         {% block script %}{% endblock %}
     </head>
     <body>
+        <div class="container">
         {% block body %}
         {% endblock %}
+        <hr/>
+        <footer class="footer">
+            Created by PuduvaiGLUG and FSFTN-VPM
+        </footer>
+        </div>
     </body>
 </html>
