--- a/wsgi/voteforindia/templates/index.html
+++ b/wsgi/voteforindia/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
 {% block body %}
-    <h1>Vote For India</h1>
+<h1>Vote For India</h1>
+<p>Matches your ideology with Political parties</p>
 {% endblock %}
