--- a/wsgi/voteforindia/templates/base.html
+++ b/wsgi/voteforindia/templates/base.html
@@ -4,10 +4,11 @@
         <meta charset='utf-8'>
         <meta http-equiv='X-UA-Compatible' content="IE=edge">
         <meta name='viewport' content='width=device-width, initial-scale=1'>
-        
         <title>Vote For India</title>
 
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+        <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery/2.1.0/jquery.min.js"></script>
+
         {% block script %}{% endblock %}
     </head>
     <body>
