--- a/wsgi/voteforindia/templates/index.html
+++ b/wsgi/voteforindia/templates/index.html
@@ -1,5 +1,14 @@
 {% extends 'base.html' %}
+{% block script %}
+<script type="text/javascript">
+    function display(){
+        agri_val = $('#agri').val()
+        $('#agri_val').text(agri_val);
+    };
+</script>
+{% endblock %}
 {% block body %}
 <h1>Vote For India</h1>
 <p>Matches your ideology with Political parties</p>
+Agriculture: <input type="range" min="1" max="20" value="10" id="agri" onchange="display();"><p id="agri_val"></p>
 {% endblock %}
