--- a/wsgi/voteforindia/templates/index.html
+++ b/wsgi/voteforindia/templates/index.html
@@ -10,5 +10,25 @@
 {% block body %}
 <h1>Vote For India</h1>
 <p>Matches your ideology with Political parties</p>
+
 Agriculture: <input type="range" min="1" max="20" value="10" id="agri" onchange="display();"><p id="agri_val"></p>
+
+Industry: <input type="range" min="1" max="20" value="10" id="indu" onchange="display();"><p id="indu_val"></p>
+
+Technology: <input type="range" min="1" max="20" value="10" id="tech" onchange="display();"><p id="tech_val"></p>
+
+Security: <input type="range" min="1" max="20" value="10" id="sec" onchange="display();"><p id="sec_val"></p>
+
+Anti-corruption: <input type="range" min="1" max="20" value="10" id="antic" onchange="display();"><p id="antic_val"></p>
+
+Minorities: <input type="range" min="1" max="20" value="10" id="mino" onchange="display();"><p id="mino"></p>
+
+Infrastructure: <input type="range" min="1" max="20" value="10" id="infra" onchange="display();"><p id="infra_val"></p>
+
+Public Sector: <input type="range" min="1" max="20" value="10" id="pub" onchange="display();"><p id="pub_val"></p>
+
+Social Sector: <input type="range" min="1" max="20" value="10" id="soc" onchange="display();"><p id="soc_val"></p>
+
+Environment: <input type="range" min="1" max="20" value="10" id="env" onchange="display();"><p id="env_val"></p>
+
 {% endblock %}
