--- a/wsgi/voteforindia/templates/index.html
+++ b/wsgi/voteforindia/templates/index.html
@@ -1,13 +1,44 @@
 {% extends 'base.html' %}
+
 {% block script %}
 <script type="text/javascript">
     function display(sector){
         sectorName = sector
         sector = $('#' + sector).val()
-        console.log(sector);
         $('#' + sectorName + '_val').val(sector);
     };
 
+    function sendData(){
+        payload = {
+            'agriculture': $('#agriculture_val').val(),
+            'industry': $('#industry_val').val(),
+            'technology': $('#technology_val').val(),
+            'security': $('#security_val').val(),
+            'antiCorruption': $('#antiCorruption_val').val(),
+            'minorities': $('#minority_val').val(),
+            'infrastructure': $('#infrastructure_val').val(),
+            'publicSector': $('#publicSector_val').val(),
+            'socialSector': $('#socialSector_val').val(),
+            'environment': $('#environment_val').val()
+        }
+
+        // console.log(JSON.stringify(payload));
+
+        onSuccess = function (data, textStatus, jqXHR) {
+            if (jqXHR.status === 200){
+                alert("Data Submitted");
+            }
+        };
+
+        $.ajax({
+                type: 'POST',
+                url: '/respond',
+                contentType: 'application/json',
+                dataType: 'json',
+                data: JSON.stringify(payload),
+                success: onSuccess
+                })
+    }
 </script>
 {% endblock %}
 
@@ -15,6 +46,12 @@
 <h1>Vote For India</h1>
 <p>Matches your ideology with Political parties</p>
 <hr/>
+
+<div>
+    <h3>You have Rs.100 - how would you divide it among the different sectors below</h3>
+    <p>You have allocated Rs.<span id="total">100</span></p>
+</div>
+
 <div class="row">
     <div class="col-md-2">Agriculture:</div>
     <div class="col-md-4"><input type="range" min="1" max="20" value="10" id="agriculture" oninput="display(id);"></div>
@@ -76,5 +113,5 @@
 </div>
 
 <br/>
-<input type='button' value='Find My Party' class='btn btn-success'/>
+<input type='button' value='Find My Party' class='btn btn-success' onclick="sendData();"/>
 {% endblock %}
