Now the value 100 changes according to the slider

--- a/wsgi/voteforindia/templates/index.html
+++ b/wsgi/voteforindia/templates/index.html
@@ -3,9 +3,12 @@
 {% block script %}
 <script type="text/javascript">
     function display(sector){
-        sectorName = sector
+        var total
+	sectorName = sector
         sector = $('#' + sector).val()
         $('#' + sectorName + '_val').val(sector);
+	sum = Number($('#agriculture_val').val()) + Number($('#industry_val').val()) +  Number($('#technology_val').val()) +  Number($('#security_val').val()) +  Number($('#antiCorruption_val').val()) + Number($('#minority_val').val()) +  Number($('#infrastructure_val').val()) +  Number($('#publicSector_val').val()) + Number($('#socialSector_val').val()) + Number($('#environment_val').val())
+	document.getElementById("total").innerHTML = sum
     };
 
     function sendData(){
