check added for total sum, before passing the data to the server

--- a/wsgi/voteforindia/templates/index.html
+++ b/wsgi/voteforindia/templates/index.html
@@ -2,21 +2,22 @@
 
 {% block script %}
 <script type="text/javascript">
+    var sum = 100;
+
     function display(sector){
 	sectorName = sector
         sector = $('#' + sector).val()
         $('#' + sectorName + '_val').val(sector);
 
 	sum = Number($('#agriculture_val').val()) + Number($('#industry_val').val()) +  Number($('#technology_val').val()) +  Number($('#security_val').val()) +  Number($('#antiCorruption_val').val()) + Number($('#minority_val').val()) +  Number($('#infrastructure_val').val()) +  Number($('#publicSector_val').val()) + Number($('#socialSector_val').val()) + Number($('#environment_val').val())
-	if (sum == 100)	{
-        	$('#total').text(sum).css('color', 'green');
-		}   
+            
+        if (sum === 100)	{
+            $('#total').text(sum).css('color', 'green');
+	}   
 	else {
-	 $('#total').text(sum).css('color', 'red');
-
+            $('#total').text(sum).css('color', 'red');
 	}
-
- };
+    };
 
     function sendData(){
         payload = {
@@ -34,20 +35,26 @@
 
         // console.log(JSON.stringify(payload));
 
-        onSuccess = function (data, textStatus, jqXHR) {
-            if (jqXHR.status === 200){
-                alert("Data Submitted");
-            }
-        };
+        if (sum === 100) {
 
-        $.ajax({
-                type: 'POST',
-                url: '/respond',
-                contentType: 'application/json',
-                dataType: 'json',
-                data: JSON.stringify(payload),
-                success: onSuccess
-                })
+            onSuccess = function (data, textStatus, jqXHR) {
+                if (jqXHR.status === 200){
+                    alert("Data Submitted");
+                }
+            };
+
+            $.ajax({
+                    type: 'POST',
+                    url: '/respond',
+                    contentType: 'application/json',
+                    dataType: 'json',
+                    data: JSON.stringify(payload),
+                    success: onSuccess
+                    });
+        }
+        else {
+            alert("Total is not 100");
+        }
     }
 </script>
 {% endblock %}
