Slider will now be reset to default value on page refresh using ctrl+r

--- a/wsgi/voteforindia/templates/index.html
+++ b/wsgi/voteforindia/templates/index.html
@@ -71,61 +71,61 @@
 
 <div class="row">
     <div class="col-md-2">Agriculture:</div>
-    <div class="col-md-4"><input type="range" min="1" max="20" value="10" id="agriculture" oninput="display(id);"></div>
+    <div class="col-md-4"><input autocomplete="off" type="range" min="1" max="20" value="10" id="agriculture" oninput="display(id);"></div>
     <div class="col-md-4"><output id="agriculture_val" for="agriculture">10</output></div>
 </div>
 
 <div class="row">
     <div class="col-md-2">Industry:</div>
-    <div class="col-md-4"><input type="range" min="1" max="20" value="10" id="industry" oninput="display(id);"></div>
+    <div class="col-md-4"><input autocomplete="off" type="range" min="1" max="20" value="10" id="industry" oninput="display(id);"></div>
     <div class="col-md-4"><output id="industry_val" for="industry">10</output></div>
 </div>
 
 <div class="row">
     <div class="col-md-2">Technology:</div>
-    <div class="col-md-4"><input type="range" min="1" max="20" value="10" id="technology" oninput="display(id);"></div>
+    <div class="col-md-4"><input autocomplete="off" type="range" min="1" max="20" value="10" id="technology" oninput="display(id);"></div>
     <div class="col-md-4"><output id="technology_val" for="technology">10</output></div>
 </div>
 
 <div class="row">
     <div class="col-md-2">Security:</div>
-    <div class="col-md-4"><input type="range" min="1" max="20" value="10" id="security" oninput="display(id);"></div>
+    <div class="col-md-4"><input autocomplete="off" type="range" min="1" max="20" value="10" id="security" oninput="display(id);"></div>
     <div class="col-md-4"><output id="security_val" for="security">10</output></div>
 </div>
 
 <div class="row">
     <div class="col-md-2">Anti-corruption:</div>
-    <div class="col-md-4"><input type="range" min="1" max="20" value="10" id="antiCorruption" oninput="display(id);"></div>
+    <div class="col-md-4"><input autocomplete="off" type="range" min="1" max="20" value="10" id="antiCorruption" oninput="display(id);"></div>
     <div class="col-md-4"><output id="antiCorruption_val" for="antiCorruption">10</output></div>
 </div>
 
 <div class="row">
     <div class="col-md-2">Minorities:</div>
-    <div class="col-md-4"><input type="range" min="1" max="20" value="10" id="minority" oninput="display(id);"></div>
+    <div class="col-md-4"><input autocomplete="off" type="range" min="1" max="20" value="10" id="minority" oninput="display(id);"></div>
     <div class="col-md-4"><output id="minority_val" for="minority">10</output></div>
 </div>
 
 <div class="row">
     <div class="col-md-2">Infrastructure:</div>
-    <div class="col-md-4"><input type="range" min="1" max="20" value="10" id="infrastructure" oninput="display(id);"></div>
+    <div class="col-md-4"><input autocomplete="off" type="range" min="1" max="20" value="10" id="infrastructure" oninput="display(id);"></div>
     <div class="col-md-4"><output id="infrastructure_val" for="infrastructure">10</output></div>
 </div>
 
 <div class="row">
     <div class="col-md-2">Public Sector:</div>
-    <div class="col-md-4"><input type="range" min="1" max="20" value="10" id="publicSector" oninput="display(id);"></div>
+    <div class="col-md-4"><input autocomplete="off" type="range" min="1" max="20" value="10" id="publicSector" oninput="display(id);"></div>
     <div class="col-md-4"><output id="publicSector_val" for="publicSector">10</output></div>
 </div>
 
 <div class="row">
     <div class="col-md-2">Social Sector:</div>
-    <div class="col-md-4"><input type="range" min="1" max="20" value="10" id="socialSector" oninput="display(id);"></div>
+    <div class="col-md-4"><input autocomplete="off" type="range" min="1" max="20" value="10" id="socialSector" oninput="display(id);"></div>
     <div class="col-md-4"><output id="socialSector_val" for="socialSector">10</output></div>
 </div>
 
 <div class="row">
     <div class="col-md-2">Environment:</div>
-    <div class="col-md-4"><input type="range" min="1" max="20" value="10" id="environment" oninput="display(id);"></div>
+    <div class="col-md-4"><input autocomplete="off" type="range" min="1" max="20" value="10" id="environment" oninput="display(id);"></div>
     <div class="col-md-4"><output id="environment_val" for="environment">10</output></div>
 </div>
 
