--- a/wsgi/voteforindia/templates/index.html
+++ b/wsgi/voteforindia/templates/index.html
@@ -40,8 +40,10 @@
             onSuccess = function (data, textStatus, jqXHR) {
                 if (jqXHR.status === 200){
                     result = JSON.stringify(data);
-                    $.each(data, function(key, value){
-                            $('#results').append("<li><h3>" + key + "- " + value + "% </h3></li>");
+                    	$('#results').empty()
+			$.each(data, function(key, value){
+                       
+			$('#results').append("<li><h3>" + key + "- " + value + "% </h3></li>");
                     })
                 }
             };
