Added sorting feature to the results

--- a/wsgi/voteforindia/templates/index.html
+++ b/wsgi/voteforindia/templates/index.html
@@ -34,15 +34,21 @@
         }
 
         // console.log(JSON.stringify(payload));
-
-        if (sum === 100) {
+if (sum === 100) {
 
             onSuccess = function (data, textStatus, jqXHR) {
                 if (jqXHR.status === 200){
                     result = JSON.stringify(data);
-                    	$('#results').empty()
-			$.each(data, function(key, value){
-                            $('#results').append("<li><h3>" + key + "- " + value + "% </h3></li>");
+                        $('#results').empty()
+
+                        var sortable = [];
+                        for (var party in data)
+                                sortable.push([party, data[party]])
+                                sortable.sort(function(a, b) {return a[1] - b[1]})
+
+                        $.each(sortable, function(key, value){
+
+                        $('#results').append("<li><h3>" +  value[0] + ":"+ value[1] + "% </h3></li>");
                     })
                 }
             };
