--- a/wsgi/voteforindia/templates/index.html
+++ b/wsgi/voteforindia/templates/index.html
@@ -39,15 +39,17 @@
             onSuccess = function (data, textStatus, jqXHR) {
                 if (jqXHR.status === 200){
                         $('#results').empty()
-
+                            $('#results').append("<p><u>The percentage in the below results are arranged in the order that matches with your ideology</u></p>");
                         var sortable = [];
                         for (var party in data)
                                 sortable.push([party, data[party]])
                                 sortable.sort(function(a, b) {return a[1] - b[1]})
                                 
                         $.each(sortable.reverse(), function(key, value){
-                            $('#results').append("<li><h3>" +  value[0] + ":"+ value[1] + "% </h3></li>");
+                                $('#results').append("<li><h3>" +  value[0] + ": <span class='badge' style='font-size: 25px';>"+ value[1] + "% </span></h3></li>");
                         })
+                        
+                        $('#results').append("<h3><a href='/methodology' target='_blank'>How do we Rank?</a></h3>");
                         $('#desc').prepend("<hr/>");
                 }
             };
@@ -69,9 +71,10 @@
 {% endblock %}
 
 {% block body %}
-<h1>Vote For India</h1>
-<p>Match your ideology with Political parties</p>
-<hr/>
+<div class="page-header">
+    <h1>Vote For India <span class="glyphicon glyphicon-hand-up"></span>
+        <small>Match your ideology with Political parties</small></h1>
+</div>
 
 <div>
     <ul id="results" style="list-style: none;">
@@ -79,9 +82,11 @@
 </div>
 
 <div id="desc">
-    <h3>You have Rs.100 - how would you divide it among the different sectors below</h3>
-    <p>You have allocated Rs.<span id="total">100</span></p>
+    <h3>You have Rs.100 - how would you divide it among the different sectors below?</h3>
+    <p bgcolor="black" text="white">You have allocated Rs.<span id="total">100</span></p>
 </div>
+
+<hr/>
 
 <div class="row">
     <div class="col-md-2">Agriculture:</div>
