--- a/wsgi/voteforindia/templates/methodology.html
+++ b/wsgi/voteforindia/templates/methodology.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div>
-    <h1>How do we rank?</h1>
+    <h1>How do we rank? <span class="glyphicon glyphicon-filter"></span></h1><hr/>
     <p><a href="http://whogetsmyvote.in" target="_blank">WhoGetsMyVote.in</a> serves as an inspiration for us to create this app. We use the <i>same parameters</i> as they do, but <i>we might differ</i> in calculating the percentage for every parties to match with your ideology. Because, we do not know how they calculate, since we do not have access to their server side code. Here is the link to their <a href="http://whogetsmyvote.in/methodology.html" target="_blank">methodology</a></p>
 
     <p>We have made this app a <strong>Free Software under GPL v3 License</strong>, which means we wanted to be more <strong>transparent</strong> about how we calculate. The source code for this site is available online and anyone who wishes to see how we perform operations are most welcome. Do not stop there, if you find any flaw in our percentage calculation or if you feel we can do better, please feel free to fork the repo and modify the code or create issues or email us at "ask@fsftn.org"</p>
