--- a/wsgi/voteforindia/templates/base.html
+++ b/wsgi/voteforindia/templates/base.html
@@ -26,7 +26,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="/home">Home</a></li>
                     <li><a href="/methodology">Rank Methodology</a></li>
-                    <li><a href="/about">About Us</a></li>
+                    <!-- <li><a href="/about">About Us</a></li> -->
                 </ul>
             </div>
         </div>
