--- a/wsgi/voteforindia/templates/index.html
+++ b/wsgi/voteforindia/templates/index.html
@@ -12,10 +12,10 @@
 	sum = Number($('#agriculture_val').val()) + Number($('#industry_val').val()) +  Number($('#technology_val').val()) +  Number($('#security_val').val()) +  Number($('#antiCorruption_val').val()) + Number($('#minority_val').val()) +  Number($('#infrastructure_val').val()) +  Number($('#publicSector_val').val()) + Number($('#socialSector_val').val()) + Number($('#environment_val').val())
             
         if (sum === 100)	{
-            $('#total').text(sum).css('color', 'green');
+            $('#total').text(sum).css('color', 'white');
 	}   
 	else {
-            $('#total').text(sum).css('color', 'red');
+            $('#total').text(sum).css('color', 'yellow');
 	}
     };
 
@@ -82,8 +82,8 @@
 </div>
 
 <div id="desc">
-    <h3>You have Rs.100 - how would you divide it among the different sectors below?</h3>
-    <p bgcolor="black" text="white">You have allocated Rs.<span id="total">100</span></p>
+    <h3>You have Rs.100 - How would you divide it among the different sectors below?</h3>
+    <h3>You have allocated Rs.<span id="total" class="badge" style="font-size: 20px;">100</span></h3>
 </div>
 
 <hr/>
