Added og meta data

--- a/wsgi/voteforindia/templates/base.html
+++ b/wsgi/voteforindia/templates/base.html
@@ -4,6 +4,10 @@
         <meta charset='utf-8'>
         <meta http-equiv='X-UA-Compatible' content="IE=edge">
         <meta name='viewport' content='width=device-width, initial-scale=1'>
+        <meta property="og:title" content="I Vote For">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="http://voteforindia-fsftn.rhcloud.com/">
+        <meta property="og:image" content="http://4.bp.blogspot.com/-_MGnJIOGxys/T74uA0egJOI/AAAAAAAAA9c/OQSF5Q4NsfM/s1600/Guide4BankExams_PovertyEradication.jpg">
         <title>Vote For India</title>
 	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
