--- a/wsgi/voteforindia/templates/index.html
+++ b/wsgi/voteforindia/templates/index.html
@@ -44,11 +44,17 @@
                         for (var party in data)
                                 sortable.push([party, data[party]])
                                 sortable.sort(function(a, b) {return a[1] - b[1]})
-                                
-                        $.each(sortable.reverse(), function(key, value){
-                                $('#results').append("<li><h3>" +  value[0] + ": <span class='badge' style='font-size: 25px';>"+ value[1] + "% </span></h3></li>");
-                        })
-                        
+                               var colorr = ["#008000", "#00c957", "#ff6633", "#cc0000"];
+			
+                     
+				var i = 0;
+			 $.each(sortable.reverse(), function(key, value){
+				
+                                $('#results').append("<li><h3>" +  value[0] + ": <span class='badge' style='background-color: "+colorr[i]+" ; font-size: 25px ;'>"+ value[1] + "% </span></h3></li>");
+             			 i = i+1; 
+
+       })
+                    
                         $('#results').append("<h3><a href='/methodology' target='_blank'>How do we Rank?</a></h3>");
                         $('#desc').prepend("<hr/>");
                 }
