--- a/wsgi/voteforindia/templates/base.html
+++ b/wsgi/voteforindia/templates/base.html
@@ -11,7 +11,8 @@
         <title>Vote For India</title>
 	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-        <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery/2.1.0/jquery.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+	<script type="text/javascript" src="http://cdn.jsdelivr.net/jquery/2.1.0/jquery.min.js"></script>
 
         {% block script %}{% endblock %}
     </head>
