Added Rank table and About Page

--- a/wsgi/voteforindia/templates/methodology.html
+++ b/wsgi/voteforindia/templates/methodology.html
@@ -7,7 +7,7 @@
 
     <p>We have made this app a <strong>Free Software under GPL v3 License</strong>, which means we wanted to be more <strong>transparent</strong> about how we calculate. The source code for this site is available online and anyone who wishes to see how we perform operations are most welcome. Do not stop there, if you find any flaw in our percentage calculation or if you feel we can do better, please feel free to fork the repo and modify the code or create issues or email us at "ask@fsftn.org"</p>
 
-    <p>We are constantly reading the manifesto of the 5 Parties (INC, CPI, CPM, BJP &amp; AAP) and tuning our parameters accordingly. So expect changes in results as we progress with manifesto.</p>
+    <p>We are constantly reading the manifesto of the 5 Parties (INC, CPI, CPM, BJP &amp; AAP) and tuning our <a href="/methodology/rank_table" target="_blank">parameters</a> accordingly. So expect changes in results as we progress with manifesto.</p>
 
     <p>Apps like this should be <strong>trustworthy</strong>. To be trustworthy, we feel it should be transparent. To be transparent, the source code should be in <strong>public domain</strong>. This is the reason we created our own version of the same app.</p>
 </div>
