--- a/wsgi/voteforindia/templates/base.html
+++ b/wsgi/voteforindia/templates/base.html
@@ -30,8 +30,9 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="/home">Home</a></li>
-                    <li><a href="/methodology">Rank Methodology</a></li>
-                    <!-- <li><a href="/about">About Us</a></li> -->
+                    <li><a href="/methodology">Rank Methodology</a></li> 
+                    <li><a href="/methodology/rank_table">Rank Table</a></li>
+	            <li><a href="/about">About Us</a></li>
                 </ul>
             </div>
         </div>
