Changes in 'note' below the rank table

--- a/wsgi/voteforindia/templates/rank_table.html
+++ b/wsgi/voteforindia/templates/rank_table.html
@@ -94,7 +94,7 @@ text-align:center;
 
 </table>
 <br>
-<p align='center'><b>Note: </b>0 = L | 1 = N | 2 = H</p>
+<p align='center'><b>Note: </b>0 = Low | 1 = Normal | 2 = High</p>
 </div>
 {% endblock %}
 
